test/speedtest/openspeedtest/ingress-wildcard/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: openspeedtest

resources:
- ingress.yaml
- ../../../ingress/manual-wildcard/domain-info

replacements:
- source:
    kind: ConfigMap
    name: main-domain
    fieldPath: data.subdomain
  targets:
  - select:
      kind: Ingress
      name: openspeedtest
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.rules.0.host
- source:
    kind: ConfigMap
    name: main-domain
    fieldPath: data.secret_name
  targets:
  - select:
      kind: Ingress
      name: openspeedtest
    fieldPaths:
    - spec.tls.0.secretName
